# screenagent

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/agents/: demo-debugger.md
.claude/skills/add-tool/: SKILL.md
.claude/skills/demo/: SKILL.md
.claude/skills/perf-audit/: SKILL.md
.claude/skills/reset-chrome/: SKILL.md
.claude/skills/test-agent/: SKILL.md
.claude/skills/tune-prompt/: SKILL.md
examples/: 01_basic_agent.py  02_no_api_key.py  03_browser_cdp.py  04_custom_loop.py  demo_claude_code.sh  demo_python_sdk.py  demo_recording.py
src/screenagent/: __init__.py  cli.py  config.py  interfaces.py  sdk.py  shortcuts.py  types.py
src/screenagent/action/: __init__.py  cdp.py  cgevent.py
src/screenagent/agent/: __init__.py  computer_use.py  loop.py  tools.py
src/screenagent/examples/: google_search.py
src/screenagent/mcp/: __init__.py  server.py
src/screenagent/perception/: __init__.py  ax.py  cdp.py  composite.py  screenshot.py
tests/: conftest.py  test_agent_loop.py  test_ax.py  test_cli.py  test_computer_use.py  test_open_url.py  test_sdk.py  test_shortcuts.py  test_types.py
