[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "screenagent-ai"
version = "0.3.2"
description = "Computer Use SDK for Python — build screen-controlling AI agents in a few lines of code"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
dependencies = [
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-ApplicationServices>=10.0",
    "anthropic>=0.40.0",
    "websockets>=13.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/vericontext/screenagent"
Repository = "https://github.com/vericontext/screenagent"
Issues = "https://github.com/vericontext/screenagent/issues"

[project.scripts]
screenagent = "screenagent.cli:main"
screenagent-mcp = "screenagent.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/screenagent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring system permissions and running apps",
]
asyncio_mode = "auto"
